Changelog
=========

0.5 - unreleased
----------------

- Updated distributions:
  * Plone = 4.0.2
  * Zope = 2.12.13
  * collective.recipe.omelette = 0.10

0.4 - 2010-11-24
----------------

- Updated distributions:
  * intranett.policy = 0.7
  * intranett.theme = 0.6

0.3 - 2010-11-16
----------------

- Updated distributions:
  * intranett.policy = 0.6
  * intranett.theme = 0.5

- Generate the nginx config from the buildout to deploy the error page changes
  to all servers. This closes https://jira.jarn.com/browse/INTRANETT-119.
  [hannosch]

- Added nicer error page to Nginx, which will be shown during software
  upgrades. Refs https://jira.jarn.com/browse/INTRANETT-119.
  [hannosch]

0.2 - 2010-11-15
----------------

- Updated distributions:
  * z3c.recipe.usercrontab = 1.1

- Updated to haproxy = 1.4.9 and Varnish = 2.1.4.
  [hannosch]

- Move in configuration files into this Subversion location, avoiding an
  external definition.
  [hannosch]

0.1 - 2010-11-15
----------------

- Updated distributions:
  * intranett.policy = 0.5
  * intranett.theme = 0.4
  * plone.app.controlpanel = 2.0.4
  * plone.app.z3cform = 0.5.1

- Added ZEO authentication. This closes
  https://jira.jarn.com/browse/INTRANETT-112.
  [hannosch]