@@ -1,5 +1,7 @@
 [buildout]
-extends = cfgs/versions.cfg
+extends =
+    cfgs/versions.cfg
+    cfgs/munin.cfg
 
 parts =
     env
@@ -21,8 +23,9 @@ parts =
     supervisor-crontab
     logrotate
     logrotate-crontab
-    munin1
-    munin2
+    instance1-munin
+    instance2-munin
+    ${buildout:munin-parts}
 
 allow-picked-versions = false
 versions = versions
@@ -36,6 +39,9 @@ prod-environment =
 
 [env]
 recipe = gocept.recipe.env
+
+[grp]
+recipe = collective.recipe.grp
 
 [zeo]
 recipe = plone.recipe.zeoserver
@@ -128,7 +134,7 @@ input = ${buildout:directory}/templates/haproxy.cfg
 output = ${buildout:directory}/etc/haproxy.cfg
 maxconn = 100
 user = ${env:USER}
-group = service
+group = ${grp:GROUP}
 frontend-host = 127.0.0.1
 frontend-port = 8010
 
@@ -179,16 +185,16 @@ times = 57 23 * * *
 command = /usr/sbin/logrotate -s ${buildout:directory}/var/logrotate.status ${buildout:directory}/etc/logrotate.conf
 
 
-[munin-base]
+[instance-munin-base]
 recipe = zc.recipe.egg
 eggs = munin.zope
 
-[munin1]
-<= munin-base
-scripts = munin=munin1
+[instance1-munin]
+<= instance-munin-base
+scripts = munin=instance1-munin
 arguments = http_address='${instance1:http-address}', user='${instance1:user}'
 
-[munin2]
-<= munin-base
-scripts = munin=munin2
+[instance2-munin]
+<= instance-munin-base
+scripts = munin=instance2-munin
 arguments = http_address='${instance2:http-address}', user='${instance2:user}'
