@@ -1,0 +1,68 @@
+[buildout]
+
+munin-parts =
+    munin-download
+    munin-build-conf
+    perl-net-server-download
+    perl-net-server-build
+    munin-client
+    munin-node-config
+    munin-node
+    munin-plugins
+
+
+[munin-download]
+recipe = hexagonit.recipe.download
+url = http://heanet.dl.sourceforge.net/project/munin/munin%20stable/1.2.6/munin_1.2.6.tar.gz
+strip-top-level-dir = True
+perl = /usr/bin/perl
+
+[munin-build-conf]
+recipe = collective.recipe.template
+user = ${env:USER}
+group = ${grp:GROUP}
+input = ${buildout:directory}/templates/Makefile.config.in
+output = ${munin-download:location}/Makefile.config
+
+[perl-net-server-download]
+recipe = hexagonit.recipe.download
+url = http://search.cpan.org/CPAN/authors/id/R/RH/RHANDOM/Net-Server-0.99.tar.gz
+strip-top-level-dir = True
+
+
+[perl-net-server-build]
+recipe = plone.recipe.command
+command =
+    cd ${perl-net-server-download:location}
+    perl Makefile.PL PREFIX=${munin-download:location}/opt/local INSTALLPRIVLIB=${munin-download:location}/opt/local/lib/perl5 INSTALLSCRIPT=${munin-download:location}/opt/local/bin INSTALLSITELIB=${munin-download:location}/opt/local/lib/perl5/site_perl INSTALLBIN=${munin-download:location}/opt/local/bin INSTALLMAN1DIR=${munin-download:location}/opt/local/lib/perl5/man INSTALLMAN3DIR=${munin-download:location}/opt/local/lib/perl5/man/man3
+    make install
+update-command = ${perl-net-server-build:command}
+
+
+[munin-client]
+recipe = plone.recipe.command
+command =
+    cd ${munin-download:location}
+    export PERL5LIB=${munin-download:location}/opt/local/lib/perl5/site_perl
+    make install-node install-node-plugins
+update-command = ${munin-client:command}
+
+
+[munin-node-config]
+recipe = collective.recipe.template
+input = ${buildout:directory}/templates/munin-node.conf.in
+output = ${buildout:directory}/etc/munin-node.conf
+
+
+[munin-node]
+recipe = collective.recipe.template
+input = ${buildout:directory}/templates/munin-node.in
+output = ${buildout:bin-directory}/munin-node
+mode = 755
+
+
+[munin-plugins]
+recipe = plone.recipe.command
+defaults = cpu df df_abs df_inode entropy forks fw_forwarded_local fw_packets interrupts iostat irqstats load memory netstat open_files open_inodes processes swap uptime vmstat
+command = for plugin in ${munin-plugins:defaults}; do ln -fs ${munin-download:location}/lib/plugins/$plugin ${buildout:directory}/etc/plugins/$plugin; done
+update-command = ${munin-plugins:command}
