@@ -17,10 +17,13 @@ zope.globalrequest = 1.0
 
 # Buildout / server infrastructure
 buildout.extensionscripts = 1.0
+collective.recipe.grp = 0.1
 distribute = 0.6.14
 experimental.catalogqueryplan = 3.0.2
 gocept.recipe.env = 1.0
+hexagonit.recipe.download = 1.4.1
 mr.developer = 1.16
+plone.recipe.command = 1.1
 plone.recipe.haproxy = 1.1.1
 plone.recipe.varnish = 1.1
 collective.recipe.backup = 1.6
