@@ -1,0 +1,101 @@
+#
+# the base of the Munin installation.
+# 
+DESTDIR    = ${munin-download:location}
+PREFIX     = $(DESTDIR)
+
+# Where Munin keeps its configurations (server.conf, client.conf, ++)
+CONFDIR    = ${buildout:directory}/etc
+
+# Server only - where to put munin-cron
+BINDIR     = $(PREFIX)/bin
+
+# Client only - where to put munin-node, munin-node-configure, and munin-run
+SBINDIR    = $(PREFIX)/sbin
+
+# Where to put text and html documentation
+DOCDIR     = $(PREFIX)/doc
+
+# Where to put man pages
+MANDIR     = $(PREFIX)/man
+
+# Where to put internal binaries and plugin repository
+LIBDIR     = $(PREFIX)/lib
+
+# Server only - Output directory
+HTMLDIR    = ${buildout:directory}/var/www
+CGIDIR     = $(HTMLDIR)/cgi
+
+# Client only - Where to put RRD files and other intenal data
+DBDIR      = ${buildout:directory}/var/munin
+
+# Client only - Where plugins should put their states. Must be writable by
+# group "munin", and should be preserved between reboots
+PLUGSTATE  = $(DBDIR)/plugin-state
+
+# Where Munin should place its logs.
+LOGDIR     = ${buildout:directory}/var/log/munin
+
+# Location of PID files and other statefiles. On the server, must be
+# writable by the user "munin".
+STATEDIR   = ${buildout:directory}/var/run/munin
+
+# The perl interpreter to use
+PERL       = ${munin-download:perl}
+
+# The python interpreter to use (used by some plugins)
+PYTHON     = /usr/bin/env ${buildout:python}
+
+# A modern (posix) shell.  We're not looking for arrays, but $() and
+# other modern stuff is expected.  On a posix-system the expression
+# below will find the right shell.  Most Unixes released the last 10
+# years are POSIX compliant enough for this to work (he said bravely).
+# 
+# On Linux /bin/sh, SunOS/Solaris /usr/xpg4/bin/sh or /bin/ksh
+# In general: bash or ksh will work
+#
+GOODSH     = $(shell PATH=`getconf PATH` sh -c 'type sh | sed "s/.* //"')
+
+# Path of bash for bash specific plugins
+BASH       = /bin/bash
+
+# Server only - Where to install the perl libraries
+PERLLIB    = $(DESTDIR)/opt/local/lib/perl5/site_perl
+
+# Client only - Install plugins for this architecture
+OSTYPE     = $(shell uname | tr '[A-Z]' '[a-z]')
+
+# How to figure out the hostname. (Only used in default configuration
+# files)
+HOSTNAME   = $(shell hostname)
+
+# What is the safest way to create a tempfile.
+# Default is to figure it out by testing various methods.
+# Replace this with a known platform-specific method
+MKTEMP     = $(shell ./test-mktemp)
+
+# Munin version number.
+VERSION    = $(shell cat RELEASE)
+
+# User to run munin as
+USER       = ${user}
+GROUP      = ${group}
+
+# Default user to run the plugins as
+PLUGINUSER = ${user}
+
+# Which command to use to check if the USER and GROUP to run Munin as, exists.
+GETENT = $(shell which getent || which true 2>/dev/null)
+CHECKUSER  = $(shell $(GETENT) passwd $(USER) >/dev/null 2>/dev/null || (echo "echo User $(USER) nonexistant. Create the user and retry; exit 2"))
+CHECKGROUP = $(shell $(GETENT) group $(GROUP) >/dev/null 2>/dev/null || (echo "echo Group $(GROUP) nonexistant. Create the group and retry; exit 2"))
+
+# For OSX, comment out the previous two lines and comment in these 
+#CHECKUSER  = $(shell nicl . -read /users/$(USER) >/dev/null 2>/dev/null || (echo "echo User $(USER) nonexistant. Create the user and retry; exit 2")) 
+#CHECKGROUP = $(shell nicl . -read /groups/$(GROUP) >/dev/null 2>/dev/null || (echo "echo Group $(GROUP) nonexistant. Create the group and retry; exit 2")) 
+
+CHOWN      = chown
+CHMOD      = chmod
+CHGRP      = chgrp
+# Check whether setruid functionality can be used
+HASSETR = $(shell perl -e 'use Config; my @vars=("d_setruid", "d_setreuid", "d_setresuid"); foreach my $$var (@vars) { if ($$Config{$$var} eq "define") { print "1\n"; exit 0; } } print "0\n"; exit 0;' )
+
