@@ -20,8 +20,14 @@ minfds=1024                 ; (min. avail startup file descriptors;default 1024)
 minprocs=200                ; (min. avail process descriptors;default 200)
 directory=%(here)s
 
+[program:munin-node]
+command = ${buildout:bin-directory}/pidproxy ${buildout:directory}/var/run/munin/munin-node.pid ${buildout:bin-directory}/munin-node
+autostart= true
+autorestart = true
+redirect_stderr = true
+
 [program:zeo]
-command = ${buildout:directory}/bin/zeo fg
+command = ${buildout:bin-directory}/zeo fg
 startretries = 5
 redirect_stderr = true
 autostart = true
@@ -29,14 +35,14 @@ autorestart = true
 priority = 100
 
 [program:haproxy]
-command = %(here)s/../bin/haproxy -f %(here)s/haproxy.cfg -db
+command = ${buildout:bin-directory}/haproxy -f %(here)s/haproxy.cfg -db
 autostart= true
 autorestart = true
 redirect_stderr = true
 priority = 101
 
 [program:varnish]
-command = ${buildout:directory}/bin/varnish
+command = ${buildout:bin-directory}/varnish
 startretries = 5
 redirect_stderr = true
 autostart = true
@@ -44,7 +50,7 @@ autorestart = true
 priority = 102
 
 [program:instance1]
-command = %(here)s/../bin/instance1 console
+command = ${buildout:bin-directory}/instance1 console
 startretries = 5
 redirect_stderr = true
 autostart= true
@@ -52,7 +58,7 @@ autorestart = true
 priority = 201
 
 [program:instance2]
-command = %(here)s/../bin/instance2 console
+command = ${buildout:bin-directory}/instance2 console
 startretries = 5
 redirect_stderr = true
 autostart= true
